# pollify

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: backend.yaml  ci.yaml  frontend.yml
backend/: .gitignore  Cargo.toml
backend/src/: grpc.rs  lib.rs  model.rs  web.rs
backend/src/grpc_impl/: close_poll.rs  create_poll.rs  get_poll_by_slug.rs  mod.rs  poll_result.rs  submit_vote.rs
backend/src/settings/: mod.rs
backend/src/settings/config/: default.toml
backend/src/storage/: ballot.rs  mod.rs
common/: Cargo.toml  build.rs
common/src/: grpc.rs  lib.rs
docs/: index.html
docs/assets/css/: animate.css
docs/assets/js/: main.js
frontend/: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html
frontend/src/: app.rs  async_data.rs  codegen.rs  component.rs  hooks.rs  main.rs  poll_kind.rs  router.rs  toast.rs
frontend/src/component/: create.rs  create_page.rs  create_poll_form.rs  home.rs  input.rs  not_found.rs  poll_form.rs  poll_page.rs  poll_result.rs  select.rs
frontend/src/component/create_poll_form/: ballot_step.rs  poll_step.rs  steps.rs  summary_step.rs
frontend/src/hooks/: use_poll_by_slug.rs  use_poll_kinds.rs  use_poll_result.rs  use_poll_service.rs  use_toast_on_async_data_error.rs
proto/: poll_service.proto
