[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpc"
path = "src/grpc.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
common = { path = "../common" }
tonic-web = "0.5.0"
tower-http = "0.3.5"
http = "0.2.8"

