[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "grpc"
path = "src/grpc.rs"

[[bin]]
name = "web"
path = "src/web.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
common = { path = "../common" }
tonic-web = "0.5.0"
tower-http = "0.3.5"
http = "0.2.8"
actix-web = "4"
utoipa = { version = "2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "2", features = ["actix-web"] }
config = "0.13.3"
serde_derive = "1.0.152"
serde = "1.0.152"
lazy_static = "1.4.0"
