[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
reqwest = "0.11.13"
web-sys = "0.3.60"
prost = { workspace = true }
yew-hooks = "0.2.0"
wasm-bindgen = "0.2.83"

[build-dependencies]
rust-grpc-web = { git = "https://github.com/purton-tech/rust-grpc-web", rev = "5dec430" }
