[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.20", features=["csr"] }
yew-router = "0.17"
reqwest = "0.11.13"
web-sys = { version="0.3.60", features=["HtmlSelectElement"] }
prost = { workspace = true }
prost-types = { workspace = true }
yew-hooks = "0.2.0"
wasm-bindgen = "0.2.83"
gloo-timers = "0.2.6"
js-sys = "0.3.60"

[build-dependencies]
rust-grpc-web = { git = "https://github.com/pfz4/rust-grpc-web", rev = "2fb0192" }
